# phase3-example--django-recipes

./: .pre-commit-config.yaml  Pipfile  Procfile  manage.py  pyproject.toml  requirements.txt
api/: serializers.py  tests.py  views.py
project/: .env.sample  settings.py  storage_backends.py  urls.py
recipebook/: settings.py  urls.py
recipes/: admin.py  forms.py  models.py  tests.py  views.py
recipes/migrations/: 0001_initial.py  0002_auto_20200602_2020.py  0003_auto_20200604_1500.py  0004_mealplan.py  0005_auto_20200609_1953.py  0006_recipe_original_recipe.py  0007_recipe_public.py  0008_recipe_favorited_by.py  0009_auto_20200728_1841.py  0010_auto_20200728_1941.py  0011_remove_recipe_photo.py  0012_user.py
static/js/: recipe.js
templates/: base.html
templates/recipes/: _recipe_list.html  add_ingredient.html  add_recipe.html  add_recipe_step.html  delete_recipe.html  edit_recipe.html  home.html  recipe_detail.html  recipe_list.html  search.html  show_meal_plan.html  tag_detail.html
users/: models.py  tests.py
users/migrations/: 0002_auto_20200908_1758.py
